# passport

./: .gitignore  CONSTITUICAO_VIVA_v2.md  HONESTY.md  README_1074.md  arkhe_os_v11_3.py  arkhe_os_v11_3_1_integrated.py  arkhe_os_v11_4.py  arkhe_os_v12_9.py  decree_989.md  manifesto_final.md  network_optimization_1083_export.json  passport_schema.yaml  test_imports.py  update_cache.py  update_cache_test.py  update_clean_hands.py  update_clean_hands_test.py  update_ed25519.py
app/components/: PassportEmbed.tsx
cathedral-agi-omega/: MAIN_ENTRYPOINT.py  README.md  pyproject.toml
cathedral-agi-omega/GLOBAL_DISTRIBUTED_TRAINING/: mpc_gradient_aggregator.py
cathedral-agi-omega/HUMAN_INTERFACE/: threshold_mobile_app.py
cathedral-agi-omega/INFRASTRUCTURE/ci_cd/: github_actions_prove.yml  reject_unproven.py
cathedral-agi-omega/LEAN4_SUPEREGO/: CathedralAGI.lean
cathedral-agi-omega/MULTIMODAL_ENCODERS/: vision_to_ontology.py
cathedral-agi-omega/NEURO_SYMBOLIC_ENGINE/: neuro_symbolic_bridge.py
cathedral-agi-omega/SOVEREIGN_ECONOMICS/: pouw_verifier.py
cathedral-chain/: README.md  go.mod
cathedral/orchestrator/: v6_onchain_hashtree.py
config/plugins/: hashtree.yaml  onchain.yaml
kleros_integration/: hardhat.config.js  package-lock.json  package.json
kleros_integration/cache/: solidity-files-cache.json
kleros_integration/contracts/: CathedralKlerosBridge.sol  (+3 more)
node/: auto_canonization_engine.py  passport_gateway.py  plastic_zkagi_v4.py  translation_engine.py  vector_theosis.py
tests/: test_digital_asset_custody_bridge.py  test_passport_gateway.py
(+39 files in other folders)
